--- a/index.html
+++ b/index.html
@@ -3,109 +3,95 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ready4Exam – Developer Automation Tool</title>
+  <title>Ready4Exam – Universal Automation Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-50 font-sans min-h-screen">
 
-  <header class="bg-blue-700 text-white py-4 shadow-md">
+  <header class="bg-indigo-700 text-white py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
-      <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
-      <span class="text-sm opacity-80">Developer Use Only</span>
+      <h1 class="text-xl font-bold">Ready4Exam – Universal Console</h1>
+      <span class="text-sm bg-indigo-800 px-3 py-1 rounded-full">Repo-Agnostic Loader</span>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto p-6 space-y-6">
+  <main class="max-w-5xl mx-auto p-6 space-y-6">
 
-    <section class="bg-white shadow-md rounded-xl p-6">
-      <h2 class="text-2xl font-bold mb-4 text-blue-700">Curriculum Loader</h2>
-
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+    <section class="bg-white shadow-md rounded-xl p-6 border-l-4 border-indigo-500">
+      <h2 class="text-lg font-bold mb-4 text-indigo-700">1. Target Repository Connection</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div>
-          <label class="block text-sm font-semibold mb-1">Select Class</label>
-          <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
-            <option value="">-- Select Class --</option>
-            <option value="9Telangana">Class 9 (Telangana)</option>
-            <option value="5">Class 5</option>
-            <option value="6">Class 6</option>
-            <option value="7">Class 7</option>
-            <option value="8">Class 8</option>
-            <option value="9">Class 9</option>
-            <option value="10">Class 10</option>
-            <option value="11">Class 11</option>
-            <option value="12">Class 12</option>
-          </select>
+          <label class="block text-sm font-semibold mb-1">GitHub Repo Slug</label>
+          <input type="text" id="repoSlug" placeholder="ready4exam-class-9Telangana" 
+                 class="w-full border border-gray-300 rounded-lg p-2 focus:ring-2 focus:ring-indigo-500 outline-none">
+          <p class="text-xs text-gray-500 mt-1">Format: [username]/[repo-name]</p>
         </div>
-
-        <div>
-          <label class="block text-sm font-semibold mb-1">Select Subject</label>
-          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
-        </div>
-
-        <div id="bookContainer" class="hidden">
-          <label class="block text-sm font-semibold mb-1">Select Book</label>
-          <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
+        <div class="flex items-end">
+          <button id="connectBtn" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700 transition w-full">
+            🔗 Connect & Load Curriculum
+          </button>
         </div>
       </div>
+    </section>
 
-      <div class="mt-4">
-        <label class="block text-sm font-semibold mb-1">Select Chapter</label>
-        <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
+    <section id="selectionSection" class="bg-white shadow-md rounded-xl p-6 opacity-50 pointer-events-none transition-opacity duration-300">
+      <h2 class="text-lg font-bold mb-4 text-blue-700">2. Syllabus Content</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <label class="block text-sm font-semibold mb-1">Subject</label>
+          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
+        </div>
+        <div>
+          <label class="block text-sm font-semibold mb-1">Chapter</label>
+          <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
+        </div>
       </div>
 
       <div class="flex gap-4 mt-6">
-        <button id="generateBtn"
-          class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50"
-          disabled>
-          🚀 Generate Questions
+        <button id="generateBtn" class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50">
+          🚀 Generate Chapter
         </button>
-
-        <button id="bulkGenerateBtn"
-          class="bg-purple-600 text-white px-5 py-2 rounded-lg shadow">
-          📚 Bulk Generate All Chapters
+        <button id="bulkGenerateBtn" class="bg-purple-600 text-white px-5 py-2 rounded-lg shadow hover:bg-purple-700">
+          📚 Bulk Generate Subject
         </button>
       </div>
+    </section>
 
-      <div id="bulkProgressContainer" class="hidden mt-6">
-        <div class="text-sm font-semibold mb-1 text-gray-700">Bulk Progress</div>
-        <div class="w-full bg-gray-200 h-3 rounded">
-          <div id="bulkProgressBarInner"
-               class="h-3 rounded bg-green-500 transition-all duration-300"
-               style="width:0%">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+      <section class="lg:col-span-2 bg-white shadow-md rounded-xl p-6">
+        <h2 class="text-lg font-bold mb-2 text-gray-700">Status Monitor</h2>
+        <div id="bulkProgressContainer" class="hidden mb-4">
+          <div class="w-full bg-gray-200 h-2 rounded mb-1">
+            <div id="bulkProgressBarInner" class="h-2 rounded bg-green-500 transition-all duration-300" style="width:0%"></div>
           </div>
+          <div id="bulkProgressLabel" class="text-xs text-gray-600 text-right">0 / 0 Chapters</div>
         </div>
-        <div id="bulkProgressLabel" class="text-xs mt-1 text-gray-700">0 / 0</div>
-      </div>
+        <div class="overflow-x-auto">
+          <table class="w-full text-left text-xs border-collapse">
+            <thead class="bg-gray-100">
+              <tr>
+                <th class="border p-2">Chapter Name</th>
+                <th class="border p-2">ID / Slug</th>
+                <th class="border p-2">Status</th>
+              </tr>
+            </thead>
+            <tbody id="bulkStatusTbody">
+               <tr><td colspan="3" class="p-4 text-center text-gray-400">Connect a repo to see syllabus</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
 
-      <div class="mt-6">
-        <h3 class="font-bold text-gray-700 mb-2">Bulk Chapter Status</h3>
-        <table class="w-full text-left text-xs border-collapse border border-gray-300">
-          <thead class="bg-gray-100">
-            <tr>
-              <th class="border px-2 py-1">Chapter</th>
-              <th class="border px-2 py-1">Status</th>
-              <th class="border px-2 py-1">Table ID</th>
-            </tr>
-          </thead>
-          <tbody id="bulkStatusTbody"></tbody>
-        </table>
-      </div>
-    </section>
-
-    <section class="bg-white shadow-md rounded-xl p-6">
-      <h2 class="text-xl font-bold mb-2 text-blue-700">Logs</h2>
-      <textarea id="log" readonly
-        class="w-full h-60 border border-gray-300 rounded-lg p-3 text-sm font-mono bg-gray-50"></textarea>
-    </section>
+      <section class="bg-white shadow-md rounded-xl p-6">
+        <h2 class="text-lg font-bold mb-2 text-gray-700">Logs</h2>
+        <textarea id="log" readonly class="w-full h-80 border border-gray-300 rounded-lg p-3 text-xs font-mono bg-gray-50"></textarea>
+      </section>
+    </div>
 
   </main>
 
-  <footer class="text-center text-xs text-gray-500 py-4">
-    Ready4Exam Developer Tool © 2025 | For internal use only
-  </footer>
-
-  <script type="module" src="./js/gemini_frontend.js"></script>
+  <script type="module" src="./js/universal_logic.js"></script>
 
 </body>
 </html>
