--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     </div>
   </header>
 
-  <main class="max-w-5xl mx-auto p-6 space-y-6">
+  <main class="max-w-6xl mx-auto p-6 space-y-6">
 
     <section class="bg-white shadow-md rounded-xl p-6 border-l-4 border-indigo-500">
       <h2 class="text-lg font-bold mb-4 text-indigo-700">1. Target Repository Connection</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div>
           <label class="block text-sm font-semibold mb-1">GitHub Repo Slug</label>
-          <input type="text" id="repoSlug" placeholder="ready4exam-class-9Telangana" 
+          <input type="text" id="repoSlug" placeholder="ready4exam/ready4exam-class-9Telangana" 
                  class="w-full border border-gray-300 rounded-lg p-2 focus:ring-2 focus:ring-indigo-500 outline-none">
-          <p class="text-xs text-gray-500 mt-1">Format: [username]/[repo-name]</p>
+          <p class="text-xs text-gray-500 mt-1">Format: username/repo-name</p>
         </div>
         <div class="flex items-end">
           <button id="connectBtn" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700 transition w-full">
@@ -37,23 +37,29 @@
 
     <section id="selectionSection" class="bg-white shadow-md rounded-xl p-6 opacity-50 pointer-events-none transition-opacity duration-300">
       <h2 class="text-lg font-bold mb-4 text-blue-700">2. Syllabus Content</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <div>
           <label class="block text-sm font-semibold mb-1">Subject</label>
-          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
+          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 outline-none"></select>
         </div>
+        
+        <div id="bookContainer" class="hidden">
+          <label class="block text-sm font-semibold mb-1">Book / Section</label>
+          <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 outline-none"></select>
+        </div>
+
         <div>
           <label class="block text-sm font-semibold mb-1">Chapter</label>
-          <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
+          <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2 focus:ring-2 focus:ring-blue-500 outline-none"></select>
         </div>
       </div>
 
       <div class="flex gap-4 mt-6">
-        <button id="generateBtn" class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50">
+        <button id="generateBtn" class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-800 transition disabled:opacity-50">
           🚀 Generate Chapter
         </button>
-        <button id="bulkGenerateBtn" class="bg-purple-600 text-white px-5 py-2 rounded-lg shadow hover:bg-purple-700">
-          📚 Bulk Generate Subject
+        <button id="bulkGenerateBtn" class="bg-purple-600 text-white px-5 py-2 rounded-lg shadow hover:bg-purple-700 transition">
+          📚 Bulk Generate Selection
         </button>
       </div>
     </section>
@@ -61,35 +67,44 @@
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
       <section class="lg:col-span-2 bg-white shadow-md rounded-xl p-6">
         <h2 class="text-lg font-bold mb-2 text-gray-700">Status Monitor</h2>
-        <div id="bulkProgressContainer" class="hidden mb-4">
-          <div class="w-full bg-gray-200 h-2 rounded mb-1">
-            <div id="bulkProgressBarInner" class="h-2 rounded bg-green-500 transition-all duration-300" style="width:0%"></div>
+        
+        <div id="bulkProgressContainer" class="hidden mb-4 bg-blue-50 p-3 rounded-lg border border-blue-100">
+          <div class="flex justify-between items-center mb-1">
+            <span class="text-xs font-bold text-blue-700 uppercase">Processing Progress</span>
+            <span id="bulkProgressLabel" class="text-xs font-bold text-blue-700">0 / 0</span>
           </div>
-          <div id="bulkProgressLabel" class="text-xs text-gray-600 text-right">0 / 0 Chapters</div>
+          <div class="w-full bg-gray-200 h-2 rounded-full overflow-hidden">
+            <div id="bulkProgressBarInner" class="h-full bg-blue-600 transition-all duration-500" style="width:0%"></div>
+          </div>
         </div>
-        <div class="overflow-x-auto">
-          <table class="w-full text-left text-xs border-collapse">
-            <thead class="bg-gray-100">
+
+        <div class="overflow-x-auto border rounded-lg">
+          <table class="w-full text-left text-xs">
+            <thead class="bg-gray-100 text-gray-600 uppercase">
               <tr>
-                <th class="border p-2">Chapter Name</th>
-                <th class="border p-2">ID / Slug</th>
-                <th class="border p-2">Status</th>
+                <th class="border-b p-3">Chapter</th>
+                <th class="border-b p-3">Table Slug</th>
+                <th class="border-b p-3">Status</th>
               </tr>
             </thead>
-            <tbody id="bulkStatusTbody">
-               <tr><td colspan="3" class="p-4 text-center text-gray-400">Connect a repo to see syllabus</td></tr>
+            <tbody id="bulkStatusTbody" class="divide-y">
+               <tr><td colspan="3" class="p-8 text-center text-gray-400 italic">Enter repo slug and connect to view syllabus</td></tr>
             </tbody>
           </table>
         </div>
       </section>
 
       <section class="bg-white shadow-md rounded-xl p-6">
-        <h2 class="text-lg font-bold mb-2 text-gray-700">Logs</h2>
-        <textarea id="log" readonly class="w-full h-80 border border-gray-300 rounded-lg p-3 text-xs font-mono bg-gray-50"></textarea>
+        <h2 class="text-lg font-bold mb-2 text-gray-700">Operation Logs</h2>
+        <textarea id="log" readonly class="w-full h-[400px] border border-gray-300 rounded-lg p-3 text-[10px] font-mono bg-gray-900 text-green-400 leading-relaxed"></textarea>
       </section>
     </div>
 
   </main>
+
+  <footer class="text-center py-6 text-gray-400 text-xs">
+    Ready4Exam Universal Automation Engine &copy; 2025
+  </footer>
 
   <script type="module" src="./js/universal_logic.js"></script>
 
