--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 
       <section class="bg-white shadow-md rounded-xl p-6">
         <h2 class="text-lg font-bold mb-2 text-gray-700">Operation Logs</h2>
-        <textarea id="log" readonly class="w-full h-[400px] border border-gray-300 rounded-lg p-3 text-[10px] font-mono bg-gray-900 text-green-400 leading-relaxed"></textarea>
+        <textarea id="log" readonly class="w-full h-[450px] border border-gray-300 rounded-lg p-3 text-[10px] font-mono bg-gray-900 text-green-400 leading-relaxed"></textarea>
       </section>
     </div>
 
   </main>
 
   <footer class="text-center py-6 text-gray-400 text-xs">
-    Ready4Exam Universal Automation Engine &copy; 2025
+    Ready4Exam Universal Automation Engine &copy; 2025 | For Internal Use Only
   </footer>
 
   <script type="module" src="./js/universal_logic.js"></script>
